--- a/opportunities/index.css
+++ b/opportunities/index.css
@@ -1,3 +1,192 @@
+
+/* select category */
+
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh;
+  background: #f39c12; */
+}
+h1 {
+  margin: 0 0 0.25em;
+}
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #2c3e50;
+  background-image: none;
+}
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.select {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 3em;
+  line-height: 3;
+  background: #2c3e50;
+  overflow: hidden;
+  border-radius: .25em;
+}
+select {
+  flex: 1;
+  padding: 0 .5em;
+  color: #fff;
+  cursor: pointer;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #34495e;
+  cursor: pointer;
+  pointer-events: none;
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
+}
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
+}
+
+/*  */
+
+
+/* next button */
+.arrowPacman {
+  --arrow-width: 20px;
+  --arrow-spacer: 4px;
+  --arrow-plus-spacer: calc(var(--arrow-width) + var(--arrow-spacer));
+  overflow: hidden;
+  position: absolute;
+  right: -0.2em;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: var(--arrow-plus-spacer);
+}
+.arrowPacman svg {
+  height: 16px;
+  width: var(--arrow-width);
+}
+.arrowPacman svg:last-of-type {
+  margin-left: var(--arrow-spacer);
+}
+.arrowPacman-clip {
+  align-items: center;
+  display: flex;
+  overflow: hidden;
+  transform: translateX(calc(var(--arrow-plus-spacer) * -1));
+  width: calc(var(--arrow-plus-spacer) + var(--arrow-width));
+}
+@keyframes pacman {
+  to {
+    transform: translateX(0);
+ }
+}
+@media (min-width: 560px) {
+  .buttons {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+ }
+}
+.buttons button {
+  width: 100%;
+}
+@media (min-width: 560px) {
+  .buttons button {
+    width: auto;
+ }
+}
+.buttons button:not(:first-of-type) {
+  margin-top: 1rem;
+}
+@media (min-width: 560px) {
+  .buttons button:not(:first-of-type) {
+    margin-left: 1rem;
+    margin-top: 0;
+ }
+}
+button {
+  --button-background: transparent;
+  --button-color: black;
+  background-color: var(--button-background);
+  border-radius: 4px;
+  border: 0;
+  box-shadow: none;
+  color: var(--button-color);
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 500;
+  height: 64px;
+  line-height: 1;
+  padding-left: 1rem;
+  padding-right: 2rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 150ms cubic-bezier(0.61, 1, 0.88, 1);
+  white-space: nowrap;
+}
+button:hover, button:focus {
+  box-shadow: 0 3px 7px 1px rgba(50, 50, 50, 0.25);
+}
+button:hover .arrowPacman-clip, button:focus .arrowPacman-clip {
+  animation-delay: 150ms;
+  animation-duration: 0.8s;
+  animation-name: pacman;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.55, 0, 0.21, 1);
+}
+button.-bg-yellow {
+  --button-background: #ffb31c;
+}
+button.-bg-purple {
+  --button-background: #502d3c;
+  --button-color: #ffb31c;
+}
+button > span {
+  display: block;
+  line-height: 1;
+  padding-right: 1.5rem;
+}
+button > span:first-of-type {
+  color: white;
+  font-size: 0.75rem;
+  line-height: 1.5;
+}
+:root {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+}
+.twitter {
+  bottom: 0;
+  position: fixed;
+  right: 0;
+  width: 50px;
+}
+
+/*  */
+
 /*basic reset*/
 * {margin: 0; padding: 0;}
 
@@ -14,7 +203,8 @@ body {
 }
 /*form styles*/
 .steps {
-    width: 675px;
+    /* width: 675px; */
+    width: 100%;
   margin: 50px auto;
   position: relative;
 }
@@ -27,8 +217,8 @@ body {
   padding: 20px 30px;
   border-top: 9px solid #7B1FA2;
   box-sizing: border-box;
-  width: 80%;
-  margin: 0 10%;
+  width: 94%;
+  margin: 0 3%;
   
   /*stacking fieldsets above each other*/
   position: absolute;
@@ -87,12 +277,12 @@ body {
   -moz-box-shadow: 0 0 0 transparent;
   -webkit-box-shadow: 0 0 0 transparent;
   box-shadow: 0 0 0 transparent;
-  position: absolute;
-  left: 525px;
-  margin-top: -58px;
-  padding: 0 10px;
-  height: 39px;
-  display: block;
+  /* position: absolute; */
+  /* left: 0; */
+  /* margin-top: -58px; */
+  padding: 1px 12px;
+  /* height: 39px; */
+  /* display: block; */
   color: #ffffff;
   background: #e62163;
   border: 0;
@@ -100,10 +290,16 @@ body {
   line-height: 39px;
   white-space: nowrap;
 
+
+  position: relative;
+    left: 0 !important;
+    margin-top: 24px;
+    top: -11px;
+
 }
 
 .error1:before{
-    width: 0;
+    /* width: 0;
   height: 0;
   left: -8px;
   top: 14px;
@@ -111,7 +307,18 @@ body {
   position: absolute;
   border-top: 6px solid transparent;
   border-right: 8px solid #e62163;
-  border-bottom: 6px solid transparent;
+  border-bottom: 6px solid transparent; */
+
+  width: 0;
+    height: 0;
+    left: 14px;
+    top: -14px;
+    content: '';
+    position: absolute;
+    border-top: 6px solid transparent;
+    border-left: 6px solid transparent;
+    border-bottom: 8px solid #e62163;
+    border-right: 6px solid transparent;
 }
 
 .error-log{
@@ -162,7 +369,8 @@ body {
 .steps .explanation{
 display: block;
   clear: both;
-  width: 540px;
+  /* width: 540px; */
+  width: 100%;
   background: #f2f2f2;
   position: relative;
   margin-left: -30px;
@@ -374,7 +582,7 @@ display: block;
 
   /*brings errors in */
   .error1 {
-  left: 345px;
+  left: 0;
   margin-top: -58px;
 }
 
@@ -383,67 +591,73 @@ display: block;
 
 }
 
+@media (min-width:675px){
+.steps{
+  width: 675px;
+}
+}
+
 
 @media (max-width:675px){
-/*mobile phone: uncollapse all fields: remove progress bar*/
-
-.steps {
-  width: 100%;
-  margin: 50px auto;
-  position: relative;
-}
-
-#progressbar{
-  display:none;
-}
-
-/*move error logs */
-.error1 {
-  position: relative;
-  left: 0 !important;
-  margin-top: 24px;
-  top: -11px;
-}
-
-.error1:before {
-  width: 0;
-  height: 0;
-  left: 14px;
-  top: -14px;
-  content: '';
-  position: absolute;
-  border-left: 6px solid transparent;
-  border-bottom: 8px solid #e62163;
-  border-right: 6px solid transparent;
+  /*mobile phone: uncollapse all fields: remove progress bar*/
+  
+  .steps {
+    width: 100%;
+    margin: 50px auto;
+    position: relative;
   }
-
-/*show hidden fieldsets */
-.steps fieldset:not(:first-of-type) {
-  display: block;
-}
-
-.steps fieldset{
-  position:relative;
-  width: 100%;
-  margin:0 auto;
-  margin-top: 45px;
-}
-
-.steps .next, .steps .previous{
-  display:none;
-}
-
-.steps .explanation{
-  display:none;
-}
-
-.steps .submit {
-  float: right;
-  margin: 28px auto 10px;
-  width: 100% !important;
-}
-
-}
+  
+  #progressbar{
+    display:none;
+  }
+  
+  /*move error logs */
+  .error1 {
+    position: relative;
+    left: 0 !important;
+    margin-top: 24px;
+    top: -11px;
+  }
+  
+  .error1:before {
+    width: 0;
+    height: 0;
+    left: 14px;
+    top: -14px;
+    content: '';
+    position: absolute;
+    border-left: 6px solid transparent;
+    border-bottom: 8px solid #e62163;
+    border-right: 6px solid transparent;
+    }
+  
+  /*show hidden fieldsets */
+  /* .steps fieldset:not(:first-of-type) {
+    display: block;
+  } */
+  
+  /* .steps fieldset{
+    position:relative;
+    width: 100%;
+    margin:0 auto;
+    margin-top: 45px;
+  } */
+  
+  /* .steps .next, .steps .previous{
+    display:none;
+  } */
+  
+  /* .steps .explanation{
+    display:none;
+  } */
+  
+  .steps .submit {
+    float: right;
+    margin: 28px auto 10px;
+    width: 100% !important;
+  }
+  
+  }
 
 
 
@@ -485,3 +699,66 @@ display: block;
   margin-top: 5px;
   font-size: 10px;
 }
+
+
+
+/* ERROR */
+
+.details-box {
+  -webkit-animation: shake .5s ease-in-out;
+  animation: shake .5s ease-in-out;
+}
+@-webkit-keyframes shake {
+  0% {
+    -webkit-transform: translateX(0);
+  }
+
+  20% {
+    -webkit-transform: translateX(-10px);
+  }
+
+  40% {
+    -webkit-transform: translateX(10px);
+  }
+
+  60% {
+    -webkit-transform: translateX(-10px);
+  }
+
+  80% {
+    -webkit-transform: translateX(10px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+  }
+}
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  20% {
+    transform: translateX(-10px);
+  }
+
+  40% {
+    transform: translateX(10px);
+  }
+
+  60% {
+    transform: translateX(-10px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+
+
+/*  */
