--- a/opportunities/css/style.css
+++ b/opportunities/css/style.css
@@ -140,6 +140,80 @@ background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
 .fill-form{
   display: none;
 }
+
+/* PROFILE IMAGE */
+
+.avatar-upload {
+  position: relative;
+  max-width: 205px;
+  margin: 0px auto 50px auto;
+}
+.avatar-upload .avatar-edit {
+  position: absolute;
+  right: 12px;
+  z-index: 1;
+  top: 10px;
+}
+.avatar-upload .avatar-edit input {
+  display: none;
+}
+.avatar-upload .avatar-edit input + .profilelabel {
+  display: inline-block;
+  width: 34px;
+  height: 34px;
+  margin-bottom: 0;
+  border-radius: 100%;
+  background: #FFFFFF;
+  border: 1px solid transparent;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: normal;
+  transition: all 0.2s ease-in-out;
+}
+.avatar-upload .avatar-edit input + .profilelabel:hover {
+  background: #f1f1f1;
+  border-color: #d6d6d6;
+}
+.avatar-upload .avatar-edit input + .profilelabel:after {
+  content: "\f030";
+  font-family: 'FontAwesome';
+  color: #757575;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin: auto;
+}
+.avatar-upload .avatar-preview {
+  width: 192px;
+  height: 192px;
+  position: relative;
+  border-radius: 100%;
+  border: 6px solid #F8F8F8;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+}
+.avatar-upload .avatar-preview > div {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* ERROR PROFILE UPLOAD */
+
+.error-profile-upload{
+  text-align: center;
+    color: red;
+    padding-top: 10px;
+    display: none;
+}
+
+/*  */
+
+
 /* Reset Select */
 select {
   -webkit-appearance: none;
@@ -194,6 +268,7 @@ select {
 .select:hover::after {
   color: #f39c12;
 }
+/* div[data-acc-content] {display:none; } */
 
 .container {
   width: 1070px;
@@ -281,7 +356,7 @@ fieldset {
   margin: 0 -13px;
   margin-bottom: 6px; }
   .form-row .form-group, .form-row .form-select, .form-row .form-group-flex {
-    width: 50%;
+    width: 100%;
     padding: 0 13px;
     margin-bottom: 15px; }
 
