--- a/opportunities/css/style.css
+++ b/opportunities/css/style.css
@@ -210,7 +210,7 @@ background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
   text-align: center;
     color: red;
     padding-top: 10px;
-    /* display: none; */
+    display: none;
 }
 
 /*  */
