--- a/css/main.css
+++ b/css/main.css
@@ -1965,6 +1965,7 @@ input::-moz-focus-inner {
   z-index: 400;
   height: 100%;
   width: 100%;
+  display: none;
   font-size: 1.5rem;
   line-height: 1.6;
   text-align: center;
