--- a/opportunities/css/style.css
+++ b/opportunities/css/style.css
@@ -471,10 +471,10 @@ fieldset {
     position: absolute;
     left: -9999px; }
   .form-radio input + label {
-    margin: 0px;
+    margin: 5px;
     padding: 12px 10px;
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    min-height: 50px;
     box-sizing: border-box;
     position: relative;
     display: inline-block;
@@ -662,6 +662,13 @@ li.init {
   .acc-wizard {
     padding: 67px 30px 65px 30px; } }
 @media screen and (max-width: 600px) {
+  .form-flex{
+    flex-direction: column;
+  }
+  .form-radio input + label{
+    width: 100%;
+    margin:5px 0px;
+  }
   .select{
     width: 100%;
   }
