--- a/opportunities/css/style.css
+++ b/opportunities/css/style.css
@@ -1388,3 +1388,83 @@ body {
 .modal-footer .conf-but.green {
   color: #26cf36;
 }
+
+
+/* CHECKBOXS */
+
+.ks-cboxtags {
+  /* height: 200px; */
+  overflow: auto;
+}
+
+ul.ks-cboxtags {
+    list-style: none;
+    padding: 0px;
+    
+}
+ul.ks-cboxtags li{
+  display: inline;
+}
+ul.ks-cboxtags li label{
+    display: inline-block;
+    /* background-color: rgba(255, 255, 255, .9); */
+    border: 1px solid rgba(139, 139, 139, .3);
+    color: #adadad;
+    border-radius: 5px;
+    white-space: nowrap;
+    margin: 3px 0px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    transition: all .2s;
+}
+
+ul.ks-cboxtags li label {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+ul.ks-cboxtags li label::before {
+    display: inline-block;
+    /* font-style: normal;
+    font-variant: normal; */
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    /* font-family: "Font Awesome 5 Free"; */
+    font-weight: 900;
+    font-size: 12px;
+    padding: 2px 6px 2px 2px;
+    /* content: "\f277"; */
+    transition: transform .3s ease-in-out;
+}
+
+/* ul.ks-cboxtags li input[type="checkbox"]:checked + label::before {
+    content: "\f26b";
+    transform: rotate(-360deg);
+    transition: transform .3s ease-in-out;
+} */
+
+ul.ks-cboxtags li input[type="checkbox"]:checked + label {
+    border: 1px solid #f65300;
+    /* background-color: #f65300; */
+    color: #f65300;
+    transition: all .2s ease-in-out;
+}
+
+ul.ks-cboxtags li label{
+  width: unset;
+  margin: 0px 4px 0px 0px;
+}
+/* ul.ks-cboxtags li input[type="checkbox"] {
+  display: absolute;
+} */
+ul.ks-cboxtags li input[type="checkbox"] {
+  /* position: absolute; */
+  /* opacity: 0; */
+}
+/* ul.ks-cboxtags li input[type="checkbox"]:focus + label {
+  border: 1px solid #f65300;
+} */
